[package]
authors = ["PotatoMaster101"]
description = "CLI tool for managing different git user profiles."
edition = "2024"
license = "GPL-3"
name = "git-user"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gix = "0.72"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "2.0"
